--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto' sans-serif;
-    background: linear-gradient(-120deg, #3996D3, #E84D3E);
+    background: linear-gradient(120deg, #3996D3, whitesmoke);
     height: 100vh;
     overflow: hidden;
 }
@@ -48,7 +48,7 @@ input[type="submit"]{
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #2691d9;
+    background: #3996D3;
     margin-top: 16px;
     border-radius: 25px;
     font-size: 18px;
@@ -58,6 +58,112 @@ input[type="submit"]{
     outline: none;
 }
 input[type="submit"]:hover{
-    border-color: #2691d9;
+    border-color: #3996D3;
     transition: .5s;
+}
+/* Chat */
+ul {
+	list-style: none;
+}
+.chat-container {
+	width: 1100px;
+	background: #fff;
+	margin: 30px auto;
+	overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+}
+
+.chat-header {
+	background: white;
+	color:#3996D3;
+    border-bottom: 1px solid silver;
+	padding: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.chat-main {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+}
+
+.chat-sidebar {
+	background: white;
+	color: #3996D3;
+	padding: 20px 20px 60px;
+	overflow-y: scroll;
+}
+
+.chat-sidebar h2 {
+	font-size: 20px;
+	background: rgba(0, 0, 0, 0.1);
+	padding: 10px;
+	margin-bottom: 20px;
+}
+
+.chat-sidebar h3 {
+	margin-bottom: 15px;
+}
+
+.chat-sidebar ul li {
+	padding: 10px 0;
+}
+
+.chat-messages {
+	padding: 30px;
+	max-height: 500px;
+	overflow-y: scroll;
+}
+
+.chat-messages .message {
+	padding: 10px;
+	margin-bottom: 15px;
+	background-color: whitesmoke;
+	border-radius: 5px;
+}
+
+.chat-messages .message .meta {
+	font-size: 15px;
+	font-weight: bold;
+	color: #3996D3;
+	opacity: 0.7;
+	margin-bottom: 7px;
+}
+
+.chat-messages .message .meta span {
+	color: #777;
+}
+
+.chat-form-container {
+	padding: 20px 30px;
+	background-color: #3996D3;
+}
+
+.chat-form-container form {
+	display: flex;
+}
+
+.chat-form-container input[type='text'] {
+	font-size: 16px;
+	padding: 5px;
+	height: 40px;
+	flex: 1;
+    outline: none;
+    border: none;
+}
+.btn {
+	cursor: pointer;
+	padding: 5px 15px;
+	background: #3996D3;
+	color: white;
+	border: 0;
+	font-size: 17px;
+}
+.btn:hover{
+    color: white;
 }
