--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -36,6 +36,7 @@ body{
     height: 40px;
     font-size: 16px;
     margin-bottom: 16px;
+    outline: none;
     
 }
 #room{
@@ -101,7 +102,7 @@ ul {
 
 .chat-sidebar h2 {
 	font-size: 20px;
-	background: rgba(0, 0, 0, 0.1);
+	background: whitesmoke;
 	padding: 10px;
 	margin-bottom: 20px;
 }
@@ -155,6 +156,7 @@ ul {
 	flex: 1;
     outline: none;
     border: none;
+    margin-right: 8px;
 }
 .btn {
 	cursor: pointer;
@@ -167,3 +169,4 @@ ul {
 .btn:hover{
     color: white;
 }
+
