--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 body{
     margin: 0;
     padding: 0;
@@ -169,4 +170,6 @@ ul {
 .btn:hover{
     color: white;
 }
-
+ul {
+	list-style: none;
+}
